Feat: 시스템 트레이 기능 세부 조정